--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -4,18 +4,17 @@
   </div>
   <mat-card class="mat-elevation-z12">
     <mat-tab-group color="warn" mat-stretch-tabs class="example-stretched-tabs">
-      <!-- Sign In  -->
+      
       <mat-tab label="Se connecter">
         <mat-card-content>
-          <form class="user" [formGroup]="signinForm" (ngSubmit)="signinUser()">
+          <form [formGroup]="loginForm" (ngSubmit)="loginUser()">
             <mat-form-field color="warn" class="fieeeeld">
-              <input matInput placeholder="Login" required name="login" formControlName="login">
-              <mat-error *ngIf="login.invalid">Login requis</mat-error>
+              <input matInput placeholder="Identifiant" required name="username" formControlName="username">
+              <mat-error *ngIf="username.invalid">Identifiant requis</mat-error>
               <mat-icon matSuffix>account_circle</mat-icon>
             </mat-form-field>
             <mat-form-field color="warn" class="fieeeeld">
-              <input matInput placeholder="Mot de passe" type="password" required minlength="6" name="password"
-                formControlName="password">
+              <input matInput placeholder="Mot de passe" type="password" required minlength="2" name="password" formControlName="password">
               <mat-error *ngIf="password.errors && password.errors.required">
                 Mot de passe requis
               </mat-error>
@@ -24,30 +23,28 @@
               </mat-error>
               <mat-icon matSuffix>lock</mat-icon>
             </mat-form-field>
-
-            <button mat-raised-button color="warn" class="login-button" type="submit">
+            <mat-checkbox color="warn" >Enregistrer vos identifiants ?</mat-checkbox>
+            <button type="submit" mat-raised-button color="warn" class="login-button" >
               Se connecter
             </button>
           </form>
         </mat-card-content>
       </mat-tab>
-      <!-- Fin Sign In  -->
-
-      <!-- Sign Up  -->
       <mat-tab label="S'inscrire">
+        
         <mat-card-content>
-          <form action="">
+          <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
             <div class="row">
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="Matricule" required name="matricule" ngModel #matricule="ngModel">
+                  <input matInput placeholder="Matricule" required name="matricule" formControlName="matricule">
                   <mat-icon matSuffix>approval</mat-icon>
                   <mat-error *ngIf="matricule.invalid">Matricule requise</mat-error>
                 </mat-form-field>
               </div>
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="CIN" required name="cin" ngModel #cin="ngModel">
+                  <input matInput placeholder="CIN" required name="cin" formControlName="cin">
                   <mat-error *ngIf="cin.invalid">Numéro de CIN requis</mat-error>
                   <mat-icon matSuffix>credit_card</mat-icon>
                 </mat-form-field>
@@ -56,14 +53,14 @@
             <div class="row">
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="Nom " required name="nom" ngModel #nom="ngModel">
+                  <input matInput placeholder="Nom " required name="nom" formControlName="nom">
                   <mat-icon matSuffix>perm_identity</mat-icon>
                   <mat-error *ngIf="nom.invalid">Nom requis</mat-error>
                 </mat-form-field>
               </div>
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="Prénom" required name="prenom" ngModel #prenom="ngModel">
+                  <input matInput placeholder="Prénom" required name="prenom" formControlName="prenom">
                   <mat-icon matSuffix>perm_identity</mat-icon>
                   <mat-error *ngIf="prenom.invalid">Prénom requis</mat-error>
                 </mat-form-field>
@@ -73,14 +70,14 @@
             <div class="row">
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="Adresse e-mail" required name="email" ngModel #email="ngModel">
+                  <input matInput placeholder="Adresse e-mail" required name="email" formControlName="email">
                   <mat-error *ngIf="email.invalid">Adresse e-mail requise</mat-error>
                   <mat-icon matSuffix>email</mat-icon>
                 </mat-form-field>
               </div>
               <div class="col-md-6">
                 <mat-form-field color="warn" >
-                  <input matInput placeholder="Tél" required name="tel" ngModel #tel="ngModel">
+                  <input matInput placeholder="Tél" required name="tel" formControlName="tel">
                   <mat-error *ngIf="tel.invalid">Numéro de téléphone requis</mat-error>
                   <mat-icon matSuffix>settings_phone</mat-icon>
                 </mat-form-field>
@@ -88,19 +85,19 @@
             </div>
 
             <mat-form-field color="warn" >
-              <input matInput placeholder="Numéro de CNSS" required name="cnss" ngModel #cnss="ngModel">
+              <input matInput placeholder="Numéro de CNSS" required name="cnss" formControlName="cnss">
               <mat-error *ngIf="cnss.invalid">Numéro de CNSS requis</mat-error>
               <mat-icon matSuffix>subtitles</mat-icon>
             </mat-form-field>
 
             <mat-form-field color="warn" >
-              <input matInput placeholder="Adresse" required name="adresse" ngModel #adresse="ngModel">
+              <input matInput placeholder="Adresse" required name="adresse" formControlName="adresse">
               <mat-error *ngIf="adresse.invalid">Adresse requis</mat-error>
               <mat-icon matSuffix>room</mat-icon>
             </mat-form-field>
 
 
-            <button mat-raised-button color="warn" class="login-button">
+            <button type="submit" mat-raised-button color="warn" class="login-button">
               S'inscrire
             </button>
           </form>
