--- a/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
+++ b/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
@@ -1,32 +1,32 @@
 <!-- Card -->
 <div class="container mt-5">
-    <div class="card p-3">
-        <div class="row">
-            <div class="col-md-12 right">
-                <img src="https://www.ilboursa.com/handlers/image_news_get.ashx?id=73427493-E994-4D77-9BE6-96763325388E"
-                    alt="">
-                <div class="text">
-                    <h1>Hamdi Olfa, un petit tour et puis s’en va</h1>
-                    <p>
-                        L'annonce a été faite via la page du ministère du Transport, au matin du 22 février 2021. Ella
-                        avait été nommée à ce poste le 4 janvier.
-                        Son récent différend avec le secrétaire général de l'UGTT, Noureddine Taboubi, a précipité son
-                        limogeage. Le ministre du Transport, Moez Chakchouk, a expliqué, sur Shems FM, que Melle Hamdi a
-                        violé le devoir de réserve en faisant fuiter des documents sur les réseaux sociaux. Par
-                        ailleurs, Olfa Hamdi a refusé de se présenter à un certain nombre de réunions au sein du
-                        ministère, ce qui est intolérable du point de vue du ministère.
-                    </p>
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div *ngFor="let article of Articles">
+                <div class="card p-3">
+                    <div class="row">
+                        <div class="col-md-12 right">
+
+                            <img src= "https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
+                                alt="">
+                            <div class="text">
+                                <h1> {{ article.titre }} </h1>
+                                <p>
+                                    {{ article.description }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row bb">
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <button routerLink="/retraite/article1" class="b1 btn btn-outline-danger" >Lire plus</button>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </a>
 
-        </div>
-        <div class="row bb">
-
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button type="button" class="b1 btn btn-outline-danger" routerLink="/article">Lire plus</button>
-            </div>
-
-        </div>
     </div>
+
 
 </div>
