--- a/src/app/components/private/retraite/article/article1/article1.component.html
+++ b/src/app/components/private/retraite/article/article1/article1.component.html
@@ -3,33 +3,26 @@
     <div class="card p-3">
         <div class="row">
             <div class="col-md-12 right">
-                <img src="https://www.ilboursa.com/handlers/image_news_get.ashx?id=73427493-E994-4D77-9BE6-96763325388E"
+                <img src="https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
                     alt="">
                 <div class="text">
-                    <h1>Hamdi Olfa , un petit tour et puis s’en va</h1>
+                    <h1>Tunisie-Atterrissage d’urgence d’un avion Tunisair : Un pilote explique ce qui s’est vraiment
+                        passé</h1>
                     <p>
-                        L'annonce a été faite via la page du ministère du Transport, au matin du 22 février 2021. Ella
-                        avait été nommée à ce poste le 4 janvier.
-                        Son récent différend avec le secrétaire général de l'UGTT, Noureddine Taboubi, a précipité son
-                        limogeage. Le ministre du Transport, Moez Chakchouk, a expliqué, sur Shems FM, que Melle Hamdi a
-                        violé le devoir de réserve en faisant fuiter des documents sur les réseaux sociaux. Par
-                        ailleurs, Olfa Hamdi a refusé de se présenter à un certain nombre de réunions au sein du
-                        ministère, ce qui est intolérable du point de vue du ministère.
-                        Une prise de fonction musclée et abondamment suivie par les réseaux sociaux avait marqué la
-                        nomination d’Olfa Hamdi à la tête de Tunisair le 4 janvier 2021. Sa mission était claire :
-                        redresser, si possible, la compagnie aérienne nationale ou au moins éviter qu’elle ne sombre.
-                        Sept semaines plus tard, le 22 février, elle a été limogée à grand bruit.
-                        C’est une Olfa Hamdi arrogante et sans respect de la hiérarchie que décrit le ministre des
-                        Transports, Moez Chakchouk, pour justifier son renvoi : « Elle a commis beaucoup d’erreurs. Elle
-                        n’a pas respecté le droit de réserve et ne s’est pas soumise aux autorités de tutelle. »
-                        Une prise de fonction musclée et abondamment suivie par les réseaux sociaux avait marqué la
-                        nomination d’Olfa Hamdi à la tête de Tunisair le 4 janvier 2021. Sa mission était claire :
-                        redresser, si possible, la compagnie aérienne nationale ou au moins éviter qu’elle ne sombre.
-                        Sept semaines plus tard, le 22 février, elle a été limogée à grand bruit.
-
-                        C’est une Olfa Hamdi arrogante et sans respect de la hiérarchie que décrit le ministre des
-                        Transports, Moez Chakchouk, pour justifier son renvoi : « Elle a commis beaucoup d’erreurs. Elle
-                        n’a pas respecté le droit de réserve et ne s’est pas soumise aux autorités de tutelle. »
+                        L’un des pilotes de l’avion qui a atterri hier en urgence a affirmé aujourd’hui sur les ondes de
+                        Shems fm que d’une manière générale, le commandant de bord se trouve dans l’obligation de
+                        procéder à un atterrissage forcé lorsqu’il se trouve confronté à une baisse de pression.Il a
+                        ajouté que contrairement à ce que le ministre du Transport avait déclaré hier, cette opération
+                        n’a rien à voir avec l’état de l’avion.Rappelons qu’un avion de la compagnie aérienne Tunisair à
+                        destination de Lyon avait effectué hier un atterrissage d’urgence à l’aéroport de Tunis-Carthage
+                        suite à un problème technique.
+                        L’un des pilotes de l’avion qui a atterri hier en urgence a affirmé aujourd’hui sur les ondes de
+                        Shems fm que d’une manière générale, le commandant de bord se trouve dans l’obligation de
+                        procéder à un atterrissage forcé lorsqu’il se trouve confronté à une baisse de pression.Il a
+                        ajouté que contrairement à ce que le ministre du Transport avait déclaré hier, cette opération
+                        n’a rien à voir avec l’état de l’avion.Rappelons qu’un avion de la compagnie aérienne Tunisair à
+                        destination de Lyon avait effectué hier un atterrissage d’urgence à l’aéroport de Tunis-Carthage
+                        suite à un problème technique.
                     </p>
                 </div>
             </div>
