--- a/src/app/components/private/retraite/reservation/dashboard/dashboard.component.html
+++ b/src/app/components/private/retraite/reservation/dashboard/dashboard.component.html
@@ -51,85 +51,8 @@
                     </div>
 
                     <!-- Caroussel -->
-                    <div class="col-xl-4 col-lg-5">
-                        <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
-                            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                <h3 class="m-0 font-weight-bold text-primary">Actualités</h3>
-
-                            </div>
-                            <!-- Card Body -->
-                            <div class="card-body">
-                                <div class=" pt-4 pb-2">
-                                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                            <ol class="carousel-indicators">
-                                                <li data-target="#carouselExampleIndicators" data-slide-to="0"
-                                                    class="active"></li>
-                                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                            </ol>
-                                            <div class="carousel-inner">
-                                                <div class="carousel-item active">
-                                                    <div class="card c1" style="width: 18rem;">
-                                                        <img class="card-img-top"
-                                                            src="https://www.espacemanager.com/sites/default/files/olfa_hamdi_ta_2102.png"
-                                                            alt="Card image cap">
-                                                        <div class="card-body">
-                                                            <p class="card-text">Hamdi Olfa...
-                                                            </p>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                                <div class="carousel-item">
-                                                    <div class="card c1" style="width: 18rem;">
-                                                        <img class="card-img-top photo"
-                                                            src="https://www.destinationtunisie.info/wp-content/uploads/2019/04/avion_tunisair_aeroport_tunis_carthage_airbus-a320_aziza_othmana.jpg"
-                                                            alt="Card image cap">
-                                                        <div class="card-body">
-                                                            <p class="card-text">Tunisair...
-                                                            </p>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                                <div class="carousel-item">
-                                                    <div class="card c1" style="width: 18rem;">
-                                                        <img class="card-img-top"
-                                                            src="https://i2.wp.com/lapresse.tn/wp-content/uploads/2019/05/tunisair.jpg?fit=2000%2C1155&ssl=1"
-                                                            alt="Card image cap">
-                                                        <div class="card-body">
-                                                            <p class="card-text">Tunisair...
-                                                            </p>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                            <a class="carousel-control-prev" href="#carouselExampleIndicators"
-                                                role="button" data-slide="prev">
-                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                                <span class="sr-only">Previous</span>
-                                            </a>
-                                            <a class="carousel-control-next" href="#carouselExampleIndicators"
-                                                role="button" data-slide="next">
-                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                                <span class="sr-only">Next</span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row bb">
-
-                                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                        <button type="button" class="b1 btn btn-outline-danger"
-                                            routerLink="/retraite/actualites">Voir plus</button>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-xl-4 col-lg-5 ">
+                        <app-carousel></app-carousel>
                     </div>
                 </div>
 
