--- a/src/app/components/private/retraite/article/article1/article1.component.html
+++ b/src/app/components/private/retraite/article/article1/article1.component.html
@@ -6,23 +6,9 @@
                 <img src="https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
                     alt="">
                 <div class="text">
-                    <h1>Tunisie-Atterrissage d’urgence d’un avion Tunisair : Un pilote explique ce qui s’est vraiment
-                        passé</h1>
+                    <h1>{{article.titre}}</h1>
                     <p>
-                        L’un des pilotes de l’avion qui a atterri hier en urgence a affirmé aujourd’hui sur les ondes de
-                        Shems fm que d’une manière générale, le commandant de bord se trouve dans l’obligation de
-                        procéder à un atterrissage forcé lorsqu’il se trouve confronté à une baisse de pression.Il a
-                        ajouté que contrairement à ce que le ministre du Transport avait déclaré hier, cette opération
-                        n’a rien à voir avec l’état de l’avion.Rappelons qu’un avion de la compagnie aérienne Tunisair à
-                        destination de Lyon avait effectué hier un atterrissage d’urgence à l’aéroport de Tunis-Carthage
-                        suite à un problème technique.
-                        L’un des pilotes de l’avion qui a atterri hier en urgence a affirmé aujourd’hui sur les ondes de
-                        Shems fm que d’une manière générale, le commandant de bord se trouve dans l’obligation de
-                        procéder à un atterrissage forcé lorsqu’il se trouve confronté à une baisse de pression.Il a
-                        ajouté que contrairement à ce que le ministre du Transport avait déclaré hier, cette opération
-                        n’a rien à voir avec l’état de l’avion.Rappelons qu’un avion de la compagnie aérienne Tunisair à
-                        destination de Lyon avait effectué hier un atterrissage d’urgence à l’aéroport de Tunis-Carthage
-                        suite à un problème technique.
+                        {{article.description}}
                     </p>
                 </div>
             </div>
