--- a/src/app/components/public/register-validation/register-validation.component.html
+++ b/src/app/components/public/register-validation/register-validation.component.html
@@ -1,1 +1,21 @@
-<p>Votre inscription est en attente de validation , la réponse vous sera communiquée par mail</p>
+<div class="login-page">
+    <div>
+        <img class="logoo" src="https://upload.wikimedia.org/wikipedia/fr/c/c3/Tunisair_logo.png">
+    </div>
+
+    <div class="card text-center col-xl-4 col-lg-4 verif">
+        <div class="card-header">
+            <i class="fas fa-user-plus"></i>
+        </div>
+        <div class="card-body">
+            
+            <p class="card-text">Votre inscription a été bien enregistrée.
+                <br>
+                 Vous receverez vos coordonnées de connexion par mail.</p>
+           
+        </div>
+        <div class="card-footer text-muted">
+            <button type="submit" class="btn btn-danger" routerLink="/register">Retour</button>
+        </div>
+    </div>
+</div>
