--- a/src/assets/css/sb-admin-2.css
+++ b/src/assets/css/sb-admin-2.css
@@ -10839,9 +10839,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("/assets/update.png") no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  
+}
+
+
+
+.userreclam {
+  background: url("/assets/user.png") no-repeat;
+  background-position: center;
+  background-size: contain;
+  
 }
 
 .bg-register-image {
