--- a/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
+++ b/src/app/components/private/retraite/actualites/moteur-article/moteur-article.component.html
@@ -1,32 +1,28 @@
 <!-- Card -->
 <div class="container mt-5">
-    <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div *ngFor="let article of Articles">
-                <div class="card p-3">
-                    <div class="row">
-                        <div class="col-md-12 right">
+    <ul class="list-group">
+        <li *ngFor="let article of Articles" class="list-group-item ">
+            <div class="card p-3">
+                <div class="row ">
+                    <div class="col-md-12 right">
 
-                            <img src= "https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
-                                alt="">
-                            <div class="text">
-                                <h1> {{ article.titre }} </h1>
-                                <p>
-                                    {{ article.description }}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row bb">
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <button routerLink="/retraite/article1" class="b1 btn btn-outline-danger" >Lire plus</button>
+                        <img src= "https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
+                            alt="">
+                        <div class="text">
+                            <h1> {{ article.titre }} </h1>
+                            <p>
+                                {{ article.description }}
+                            </p>
                         </div>
                     </div>
                 </div>
+                <div class="row bb">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button class="b1 btn btn-outline-danger" (click)="voirplus(article.id)" >Lire plus</button>
+                    </div>
+                </div>
             </div>
-        </a>
-
-    </div>
-
+        </li>
+      </ul>
 
 </div>
