--- a/src/app/components/private/retraite/article/articledash/articledash.component.html
+++ b/src/app/components/private/retraite/article/articledash/articledash.component.html
@@ -29,12 +29,38 @@
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h3 class="m-0 font-weight-bold text-primary">Actualités</h3>
-                                
+
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
-                                <app-article1></app-article1>
-                                
+                                <!-- Card -->
+                                <div class="container mt-5">
+                                    <div class="card p-3">
+                                        <div class="row">
+                                            <div class="col-md-12 right">
+                                                <img src="https://www.air-journal.fr/wp-content/uploads/air-journal_Tunisair_A330-200_TAKE_OFF.jpg"
+                                                    alt="">
+                                                <div class="text">
+                                                    <h1>{{article.titre}}</h1>
+                                                    <p>
+                                                        {{article.description}}
+                                                    </p>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                        <div class="row bb">
+
+                                            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                                <button type="button" class="b1 btn btn-outline-danger"
+                                                    routerLink="/retraite/actualites">Retour</button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
